k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
  labels:
    app: express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - name: express
          image: 753537844828.dkr.ecr.eu-west-2.amazonaws.com/k8s:express-test
          ports:
            - containerPort: 3000
