k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
    name: express-service
spec:
    selector:
        app: express
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
